second version of my Porfolio

--- a/index.html
+++ b/index.html
@@ -707,7 +707,6 @@
                 <li><a href="#home-section"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
                 <li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
                 <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                <li><a href="#projects-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
                 <li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
@@ -718,7 +717,7 @@
               <ul class="list-unstyled">
                 <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Infrastructure as Code</a></li>
                 <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>CI/CD Implementation</a></li>
-                <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Cloud Architecture</a></li>
+                <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Web development</a></li>
                 <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Container Orchestration</a></li>
                 <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Network Security</a></li>
               </ul>
